# Kokoro-FastAPI

./: AGENTS.md  DESIGN-XPU.md  docker-bake.hcl  pyproject.toml  start-gpu.sh
.opencode/pipeline/: status.md
api/src/: main.py
api/src/core/: config.py
api/src/inference/: base.py  kokoro_v1.py  model_manager.py
api/tests/: test_xpu_support.py
docker/scripts/: entrypoint.sh
docker/xpu/: DESIGN.md  Dockerfile  docker-compose.yml
